--- a/src/pages/garden/[...slug].astro
+++ b/src/pages/garden/[...slug].astro
@@ -35,30 +35,43 @@ const pubDate = dayjs(frontmatter.data.date);
 ---
 
 <HTML title={frontmatter.data.title} description={frontmatter.data.description}>
-    {
-        img && (
-            <Image
-                src={img?.default}
-                class="w-100"
-                alt="header image"
-                class="block my-4 rounded-lg"
-            />
-        )
-    }
-    <Link href="/garden" active={false}>garden</Link><span class="text-accent">
-        /
-    </span><Link active href={`/garden/${frontmatter.data.slug}`} class="mb-0"
-        >{frontmatter.data.title}</Link
-    >
-    <div class="flex flex-row justify-between px-0.5">
-        <p class="mt-0 italic op-50">{frontmatter.data.description}</p>
-        <p class="op-50 italic m-0">
-            {pubDate.format("MMMM DD, YYYY").toLocaleLowerCase()}
-        </p>
-    </div>
-    <div class="mb-4 line-height-normal">
-        <Content components={{ a: Link }} />
-    </div>
+    <article class="h-entry">
+        <header>
+            {
+                img && (
+                    <Image
+                        src={img?.default}
+                        class="w-100"
+                        alt="header image"
+                        class="block my-4 rounded-lg"
+                    />
+                )
+            }
+            <Link href="/garden" active={false}>garden</Link><span
+                class="text-accent"
+            >
+                /
+            </span><Link
+                active
+                href={`/garden/${frontmatter.data.slug}`}
+                class="mb-0 p-name">{frontmatter.data.title}</Link
+            >
+            <div class="flex flex-row justify-between px-0.5">
+                <p class="mt-0 italic op-50 p-summary">
+                    {frontmatter.data.description}
+                </p>
+                <time
+                    class="op-50 italic m-0 dt-published"
+                    datetime={pubDate.toISOString()}
+                >
+                    {pubDate.format("MMMM DD, YYYY").toLocaleLowerCase()}
+                </time>
+            </div>
+        </header>
+        <div class="mb-4 line-height-normal e-content">
+            <Content components={{ a: Link }} />
+        </div>
+    </article>
 </HTML>
 
 <style is:global>
