fix: garden header margin

--- a/src/pages/garden/[...slug].astro
+++ b/src/pages/garden/[...slug].astro
@@ -57,7 +57,7 @@ const pubDate = dayjs(frontmatter.data.date);
                 class="mb-0 p-name">{frontmatter.data.title}</Link
             >
             <div class="flex flex-row justify-between px-0.5">
-                <p class="mt-0 italic op-50 p-summary">
+                <p class="my-0 italic op-50 p-summary">
                     {frontmatter.data.description}
                 </p>
                 <time
