ui: update code styling

--- a/src/pages/garden/[...slug].astro
+++ b/src/pages/garden/[...slug].astro
@@ -91,6 +91,10 @@ const pubDate = dayjs(frontmatter.data.date);
     blockquote * {
         color: var(--secondaryTextColor);
     }
+    pre {
+        padding: 1rem 1.5rem;
+        border-radius: 10px;
+    }
     pre,
     code {
         font-family: "Geist Mono Variable", monospace;
