--- a/src/pages/projects/[...slug].astro
+++ b/src/pages/projects/[...slug].astro
@@ -87,7 +87,7 @@ if (frontmatter.data.image) {
         color: var(--secondaryTextColor);
     }
     pre {
-        padding: 0.5rem;
+        padding: 1rem 1.5rem;
         border-radius: 10px;
     }
     pre,
