--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -4,6 +4,14 @@ import Link from "@components/Link.astro";
 import { getCollection } from "astro:content";
 
 const projects = await getCollection("projects");
+const farFuture = new Date("3005-12-31");
+projects.sort(
+    (a, b) =>
+        (b.data.endDate ?? farFuture).getTime() -
+            (a.data.endDate || farFuture).getTime() || // sort by end date
+        b.data.startDate.getTime() - a.data.startDate.getTime() ||
+        a.data.title.localeCompare(b.data.title), // then by start year
+);
 // const projects = [
 //     {
 //         name: "chiffrage",
@@ -52,8 +60,17 @@ const projects = await getCollection("projects");
     {
         projects.map(({ data: project }) => (
             <div class="my-4">
-                <Link href={project.url}>{project.title}</Link>
-                {project.tags && <span>· {project.tags.join(" / ")}</span>}
+                <div class="flex flex-col md:flex-row md:justify-between">
+                    <div>
+                        <Link href={project.url}>{project.title}</Link>
+                        {project.tags && (
+                            <span>· {project.tags.join(" / ")}</span>
+                        )}
+                    </div>
+                    <p class="op-50 italic my-0 md:pl-2 text-nowrap">
+                        {project.date}
+                    </p>
+                </div>
                 <p class="my-1">{project.description}</p>
             </div>
         ))
