--- a/src/components/Encryptor.astro
+++ b/src/components/Encryptor.astro
@@ -12,54 +12,24 @@ import "@fontsource-variable/geist-mono";
         "button[type='submit']",
     ) as HTMLTextAreaElement;
 
-    let encrypted = false;
-    let lastEncrypted: Uint8Array;
+    const encryptor = new Encrypter();
+    encryptor.addRecipient(form.dataset.key as string);
 
     async function encrypt(text: string) {
-        const encryptor = new Encrypter();
-
-        encryptor.addRecipient(form.dataset.key as string);
         return armor.encode(await encryptor.encrypt(text));
     }
 
     form.addEventListener("submit", async (e) => {
         e.preventDefault();
-        if (encrypted) {
-            navigator.clipboard.writeText(input.value);
-            submitButton.innerText = "copied";
-            setTimeout(() => (submitButton.innerText = "copy"), 500);
-        } else {
-            const encryptedOutput = await encrypt(input.value);
-            input.value = encryptedOutput;
-            lastEncrypted = new Uint8Array(
-                await crypto.subtle.digest(
-                    "SHA-256",
-                    new TextEncoder().encode(encryptedOutput),
-                ),
-            );
-            encrypted = true;
-            submitButton.innerText = "copy";
-        }
+        const encryptedOutput = await encrypt(input.value);
+        await navigator.clipboard.writeText(encryptedOutput);
+        submitButton.innerText = "copied";
+        setTimeout(() => (submitButton.innerText = "encrypt & copy"), 2500);
     });
 
     input.addEventListener("input", async (e) => {
-        const hash = new Uint8Array(
-            await crypto.subtle.digest(
-                "SHA-256",
-                new TextEncoder().encode(input.value),
-            ),
-        );
-        const hashesMatch = lastEncrypted
-            ? hash.every((value, i) => lastEncrypted[i] === value)
-            : false;
-        if (hashesMatch) {
-            // if this is the last encrypted value, just return it
-            submitButton.innerText = "copy";
-        } else if (submitButton.innerText === "copy") {
-            submitButton.innerText = "encrypt";
-        }
         submitButton.disabled = input.value.length === 0;
-        if (encrypted) encrypted = hashesMatch || input.value.length !== 0;
+        if (input.value.length > 0) submitButton.innerText = "encrypt & copy";
     });
 </script>
 
@@ -73,7 +43,7 @@ import "@fontsource-variable/geist-mono";
     <button
         type="submit"
         class="w-full bg-dominant text-accent hover:bg-accent hover:text-secondary-text-color border-solid border-accent hover:border-accent text-[1rem] py-1 rounded-sm"
-        disabled>encrypt</button
+        disabled>encrypt & copy</button
     >
 </form>
 
