--- a/src/pages/projects/[...slug].astro
+++ b/src/pages/projects/[...slug].astro
@@ -5,6 +5,7 @@ import { getCollection } from "astro:content";
 import { render } from "astro:content";
 import { Image } from "astro:assets";
 import "@fontsource-variable/geist-mono";
+import "@styles/markdown.css"
 
 export async function getStaticPaths() {
     const projects = await getCollection("projects");
