feat: add micromorph for page transitions

--- a/src/layouts/HTML.astro
+++ b/src/layouts/HTML.astro
@@ -50,6 +50,10 @@ let title = pageTitle ? `${pageTitle} / thrizzle` : "thrizzle";
         </main>
     </body>
 
+    <script>
+    import listen from "micromorph/nav";
+    listen();
+    </script>
     <style
         is:global
         define:vars={{
